# par2rs

./: .gitignore  COVERAGE.md  Cargo.toml  LICENSE  MEMORY_OPTIMIZATION_PLAN.md  MEMORY_OPTIMIZATION_STATUS.md  Makefile  README.md  SIMD_OPTIMIZATION.md  benchmark_repair.sh  benchmark_repair_averaged.py  benchmark_repair_averaged.sh  benchmark_results.txt  build.rs  codecov.yml  corrupt-test-file.sh  entities.json  flake.nix  mempalace.yaml  par2.md  par2rs.code-workspace  result  rust-toolchain.toml  specfication.md  specification.html  tarpaulin-report.html  test_swizzle.s
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: compare_with_parpar.rs  crc_compare.rs  create_benchmark.rs  fused_hashing.rs  iai_hasher_input.rs  iai_par2verify_compare.rs  iai_parpar_comparison.rs  iai_simd.rs  md5_optimized.rs  md5_throughput.rs  md5x2_crc_fused.rs  par2verify_compare.rs  parpar_hasher_input.rs  repair_benchmark.rs  simd_size_variants.rs  typestate_benchmark.rs  verify_performance.rs
benches/common/: par2verify_fixture.rs
coverage_report/: tarpaulin-report.html
demo/: data.bin.1  data.par2  data.vol000+01.par2  data.vol001+02.par2  data.vol003+04.par2  data.vol007+08.par2  data.vol015+16.par2  data.vol031+32.par2  data.vol063+64.par2  data.vol127+70.par2
docs/: BENCHMARK_RESULTS.md  PAR2CMDLINE_TURBO_PARITY.md  REFACTORING_OPPORTUNITIES.md  SIMD_OPTIMIZATION.md  par2_parsing.md
examples/: md5_benchmark.rs
scripts/: benchmark.sh  benchmark_all_comprehensive.sh  benchmark_all_sizes.sh  benchmark_create.sh  benchmark_create_perf.sh  benchmark_repair.sh  benchmark_repair_averaged.sh  compare_turbo_parity.sh  coverage.sh  debug_create.sh  extract_benchmark_results.sh  monitor_memory.sh  profile_create_slow_paths.sh  profile_memory.sh  run_all_benchmarks.sh  stress_test_create.sh  test_compare.sh  turbo_dump_xor_finish_packed_avx2.c  turbo_dump_xor_prepare_packed_avx2.c  turbo_dump_xorjit_body_avx2.c
src/: analysis.rs  args.rs  checksum.rs  domain.rs  file_checksummer.rs  file_ops.rs  file_verification.rs  galois.rs  lib.rs  main.rs  md5_writer.rs  packets.rs  par2_files.rs  recovery_loader.rs  repair.rs  slice_provider.rs  validation.rs  verify.rs
src/checksum/: md5_reader.rs  rolling_crc.rs
src/cli/: compat.rs
src/create/: backend.rs  builder.rs  cli.rs  context.rs  error.rs  error_helpers.rs  file_naming.rs  hashing.rs  mod.rs  packet_generator.rs  profile.rs  progress.rs  source_file.rs  types.rs  writer.rs
src/ffi/: mod.rs  wrapper.cpp
src/packets/: creator_packet.rs  error.rs  file_description_packet.rs  input_file_slice_checksum_packet.rs  main_packet.rs  mod.rs  packed_main_packet.rs  processing.rs  recovery_slice_packet.rs
src/par1/: mod.rs  parser.rs  purge.rs  repair.rs  types.rs  verify.rs
src/parpar_hasher/: ATTRIBUTION.md  crc_armcrc.rs  crc_clmul.rs  crc_clmul_avx512.rs  hasher_input.rs  hasher_input_arm64.rs  hasher_input_dyn.rs  md5x2.rs  md5x2_avx512.rs  md5x2_bmi1.rs  md5x2_neon.rs  md5x2_scalar.rs  md5x2_sse2.rs  mod.rs
src/reed_solomon/: aligned.rs  builder.rs  codec.rs  encoder.rs  galois.rs  matrix.rs  mod.rs  par2_reed_solomon.rs  reconstruction.rs  reedsolomon.rs  scalar.rs  simd.rs  simd_neon.rs  simd_pshufb.rs  types.rs  typestate.rs
src/repair/: builder.rs  context.rs  error.rs  error_helpers.rs  md5_writer.rs  mod.rs  progress.rs  recovery_loader.rs  slice_provider.rs  types.rs  validate.rs
src/reporters/: console.rs  mod.rs  silent.rs
src/verify/: config.rs  error.rs  file_verification.rs  global_engine.rs  global_table.rs  mod.rs  scanner_state.rs  test_global.rs  turbo_file_scan.rs  types.rs  utils.rs  validation.rs  verification_table.rs  verifier.rs
tests/: compare_with_parpar.rs  create_hot_path_allocations.rs  debug_repair_issue.rs  md5x2_neon_placeholder.rs  packet_tests.rs  par2_tests.rs  parse_packets_test.rs  reed_solomon.rs  reed_solomon_property_tests.rs  test_analysis.rs  test_analysis_comprehensive.rs  test_args_and_domain.rs  test_binaries.rs  test_buffer_boundary_scanning.rs  test_checksum_comprehensive.rs  test_checksum_filescan.rs  test_compare_with_par2cmdline.rs  test_console_repair_reporter.rs  test_console_verification_reporter.rs  test_create_integration.rs  test_create_reed_solomon_processing.rs  test_creator_packet_comprehensive.rs  test_creator_packet_serialization.rs  test_file_deduplication.rs  test_file_description_packet.rs  test_file_description_packet_serialization.rs  test_file_ops.rs  test_file_scan_metadata.rs  test_file_verification.rs  test_file_verifier.rs  test_global_verification_scanning_bugs.rs  test_input_file_slice_checksum_packet_serialization.rs  test_integration.rs  test_main_packet_comprehensive.rs  test_main_packet_fields.rs  test_matrix_comprehensive.rs  test_md5_verification.rs  test_metadata_parsing.rs  test_mixed_recovery_sets.rs  test_multifile_bug.rs  (+55 more)
tests/common/: mod.rs
tests/fixtures/: testfile  testfile.vol01+02.par2  testfile.vol07+08.par2  testfile_good_backup  testfile_heavily_corrupted
tests/packets/: creator_serialization.rs  file_description_serialization.rs  main_serialization.rs  recovery_slice_serialization.rs
(+98 files in other folders)
